--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
  margin: 0;
 }
 .body{
-  background-image: url("/images.jpg");
+    background-color: #1A1A19;
   min-height: 100vh;
   background-repeat: no-repeat;
   background-size: 100vw 100vh;
@@ -24,11 +24,11 @@
 
 .head{
     background-color: white;
-
+ border-radius: 50%;
 
 }
 .snb{
-    background-color: orange;
+    background-color: #859F3D;
     border-radius: 10px;
 }
 .food{
@@ -75,9 +75,15 @@
     font-size: 16px;
     cursor: pointer; 
 }
+#left{
+    padding: 6px;
+    margin: 30px;
+    font-size: 16px;
+    cursor: pointer; 
+}
 #right{
     padding: 6px;
-    margin: 4px;
+    margin: 30px;
     font-size: 16px;
     cursor: pointer; 
 }
